components/nvidia-gpu-operator/nvidia-gpu-operator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
  annotations:
    argocd.argoproj.io/sync-wave: '0'
  labels:
    openshift.io/cluster-monitoring: "true"
